--- a/openApiDocs/beta/BackupRestore.yml
+++ b/openApiDocs/beta/BackupRestore.yml
@@ -658,6 +658,91 @@ paths:
           $ref: '#/components/responses/ODataCountResponse'
         default:
           $ref: '#/components/responses/error'
+  /solutions/backupRestore/emailNotificationsSetting:
+    get:
+      tags:
+        - solutions.backupRestoreRoot
+      summary: Get emailNotificationsSetting
+      description: Read the properties and relationships of an emailNotificationsSetting object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/emailnotificationssetting-get?view=graph-rest-beta
+      operationId: solution.backupRestore_GetEmailNotificationsSetting
+      parameters:
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+      responses:
+        2XX:
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.emailNotificationsSetting'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - solutions.backupRestoreRoot
+      summary: Update emailNotificationsSetting
+      description: Update the properties of an emailNotificationsSetting object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/emailnotificationssetting-update?view=graph-rest-beta
+      operationId: solution.backupRestore_UpdateEmailNotificationsSetting
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.emailNotificationsSetting'
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.emailNotificationsSetting'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - solutions.backupRestoreRoot
+      summary: Delete navigation property emailNotificationsSetting for solutions
+      operationId: solution.backupRestore_DeleteEmailNotificationsSetting
+      parameters:
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
   /solutions/backupRestore/exchangeProtectionPolicies:
     get:
       tags:
@@ -7755,6 +7840,8 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.driveProtectionUnitsBulkAdditionJob'
               x-ms-navigationProperty: true
+            emailNotificationsSetting:
+              $ref: '#/components/schemas/microsoft.graph.emailNotificationsSetting'
             exchangeProtectionPolicies:
               type: array
               items:
@@ -7909,6 +7996,21 @@ components:
                 type: string
                 nullable: true
               description: The list of email addresses to add to the OneDrive protection policy.
+          additionalProperties:
+            type: object
+    microsoft.graph.emailNotificationsSetting:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: emailNotificationsSetting
+          type: object
+          properties:
+            additionalEvents:
+              $ref: '#/components/schemas/microsoft.graph.notificationEventsType'
+            isEnabled:
+              type: boolean
+              description: Indicates whether notifications are enabled.
+            recipients:
+              $ref: '#/components/schemas/microsoft.graph.notificationRecipients'
           additionalProperties:
             type: object
     microsoft.graph.exchangeProtectionPolicy:
@@ -8094,7 +8196,7 @@ components:
               items:
                 type: string
                 nullable: true
-              description: The list of directory object IDs that are added to the corresponding Exchange restore session in a bulk operation. This property isn't implemented yet. Future value; don't use.
+              description: The list of directory object IDs that are added to the corresponding Exchange restore session in a bulk operation.
             mailboxes:
               type: array
               items:
@@ -8213,7 +8315,7 @@ components:
               items:
                 type: string
                 nullable: true
-              description: The list of directory object IDs that are added to the corresponding OneDrive for work or school restore session in a bulk operation. This property isn't implemented yet. Future value; don't use.
+              description: The list of directory object IDs that are added to the corresponding OneDrive for work or school restore session in a bulk operation.
             drives:
               type: array
               items:
@@ -8560,7 +8662,7 @@ components:
               items:
                 type: string
                 nullable: true
-              description: The list of SharePoint site IDs that are added to the corresponding SharePoint restore session in a bulk operation. This property isn't implemented yet. Future value; don't use.
+              description: The list of SharePoint site IDs that are added to the corresponding SharePoint restore session in a bulk operation.
             siteWebUrls:
               type: array
               items:
@@ -8642,6 +8744,28 @@ components:
               $ref: '#/components/schemas/microsoft.graph.protectionUnitsBulkJobStatus'
           additionalProperties:
             type: object
+    microsoft.graph.notificationEventsType:
+      title: notificationEventsType
+      enum:
+        - none
+        - restoreAndPolicyUpdates
+        - unknownFutureValue
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
+    microsoft.graph.notificationRecipients:
+      title: notificationRecipients
+      type: object
+      properties:
+        customRecipients:
+          type: array
+          items:
+            $ref: '#/components/schemas/microsoft.graph.emailIdentity'
+          description: A list of users or groups that receive notifications.
+        role:
+          $ref: '#/components/schemas/microsoft.graph.notificationRecipientsType'
+      additionalProperties:
+        type: object
     microsoft.graph.mailboxType:
       title: mailboxType
       enum:
@@ -8911,11 +9035,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
           nullable: true
       additionalProperties:
         type: object
@@ -9311,6 +9435,30 @@ components:
         - completedWithErrors
         - unknownFutureValue
       type: string
+    microsoft.graph.emailIdentity:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.identity'
+        - title: emailIdentity
+          type: object
+          properties:
+            email:
+              type: string
+              description: Email address of the user.
+              nullable: true
+          additionalProperties:
+            type: object
+    microsoft.graph.notificationRecipientsType:
+      title: notificationRecipientsType
+      enum:
+        - none
+        - globalAdmins
+        - backupAdmins
+        - custom
+        - allAdmins
+        - unknownFutureValue
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
     microsoft.graph.destinationType:
       title: destinationType
       enum:
