--- a/openApiDocs/beta/Reports.yml
+++ b/openApiDocs/beta/Reports.yml
@@ -1187,7 +1187,11 @@ paths:
     get:
       tags:
         - auditLogs.selfServiceSignUp
-      summary: Get signUps from auditLogs
+      summary: List signUps
+      description: 'Retrieve the Microsoft Entra External ID user selfServiceSignUps events for your tenant.  The maximum and default page size is 1,000 objects and by default, the most recent sign-ups are returned first. Only sign-up events that occurred within the Microsoft Entra ID default retention period are available.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/auditlogroot-list-signups?view=graph-rest-beta
       operationId: auditLog_ListSignUp
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1260,7 +1264,11 @@ paths:
     get:
       tags:
         - auditLogs.selfServiceSignUp
-      summary: Get signUps from auditLogs
+      summary: Get selfServiceSignUp
+      description: 'Retrieve a specific Microsoft Entra External ID user selfServiceSignUp event for your tenant.  '
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/selfservicesignup-get?view=graph-rest-beta
       operationId: auditLog_GetSignUp
       parameters:
         - name: selfServiceSignUp-id
@@ -6741,6 +6749,78 @@ paths:
                   minimum: -2147483648
                   type: number
                   format: int32
+                sessionId:
+                  type: string
+                  nullable: true
+                filter:
+                  type: string
+                  nullable: true
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/octet-stream:
+              schema:
+                type: object
+                properties:
+                  value:
+                    type: string
+                    format: base64url
+                    nullable: true
+                additionalProperties:
+                  type: object
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
+  /deviceManagement/reports/microsoft.graph.retrieveAndroidWorkProfileDeviceMigrationStatuses:
+    post:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Invoke action retrieveAndroidWorkProfileDeviceMigrationStatuses
+      operationId: deviceManagement.report_retrieveAndroidWorkProfileDeviceMigrationStatus
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  nullable: true
+                select:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+                groupBy:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+                orderBy:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+                search:
+                  type: string
+                  nullable: true
+                skip:
+                  maximum: 2147483647
+                  minimum: -2147483648
+                  type: number
+                  format: int32
+                  nullable: true
+                top:
+                  maximum: 2147483647
+                  minimum: -2147483648
+                  type: number
+                  format: int32
+                  nullable: true
                 sessionId:
                   type: string
                   nullable: true
@@ -15920,6 +16000,121 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: action
+  /reports/partners/billing/reconciliation/unbilled:
+    get:
+      tags:
+        - reports.partners
+      summary: Get unbilled from reports
+      description: Represents details for unbilled invoice reconciliation data.
+      operationId: report.partner.billing.reconciliation_GetUnbilled
+      parameters:
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+      responses:
+        2XX:
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - reports.partners
+      summary: Update the navigation property unbilled in reports
+      operationId: report.partner.billing.reconciliation_UpdateUnbilled
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - reports.partners
+      summary: Delete navigation property unbilled for reports
+      operationId: report.partner.billing.reconciliation_DeleteUnbilled
+      parameters:
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  /reports/partners/billing/reconciliation/unbilled/microsoft.graph.partners.billing.export:
+    post:
+      tags:
+        - reports.partners
+      summary: Invoke action export
+      description: Export the unbilled invoice reconciliation data for a specific billing period and a given currency.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/partners-billing-unbilledreconciliation-export?view=graph-rest-beta
+      operationId: report.partner.billing.reconciliation.unbilled_export
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                currencyCode:
+                  type: string
+                  nullable: true
+                billingPeriod:
+                  $ref: '#/components/schemas/microsoft.graph.partners.billing.billingPeriod'
+                attributeSet:
+                  $ref: '#/components/schemas/microsoft.graph.partners.billing.attributeSet'
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.partners.billing.operation'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   /reports/partners/billing/usage:
     get:
       tags:
@@ -21103,8 +21298,11 @@ paths:
     get:
       tags:
         - reports.userInsightsRoot
-      summary: Get summary from reports
-      description: Summary of all usage insights on apps registered in the tenant for a specified period.
+      summary: List monthly summary
+      description: Get a list of monthly  insightSummary objects on apps registered in your tenant configured for Microsoft Entra External ID for customers.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/monthlyuserinsightmetricsroot-list-summary?view=graph-rest-beta
       operationId: report.userInsight.monthly_ListSummary
       parameters:
         - $ref: '#/components/parameters/top'
@@ -21254,11 +21452,13 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.signIn'
+          description: Represents Microsoft Entra sign-in events. Read-only. Nullable.
           x-ms-navigationProperty: true
         signUps:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.selfServiceSignUp'
+          description: Represents sign up events in Microsoft Entra External ID. Read-only. Nullable.
           x-ms-navigationProperty: true
       additionalProperties:
         type: object
@@ -21432,6 +21632,8 @@ components:
         - title: signIn
           type: object
           properties:
+            agent:
+              $ref: '#/components/schemas/microsoft.graph.agentic.agentSignIn'
             appDisplayName:
               type: string
               description: 'The application name displayed in the Microsoft Entra admin center.  Supports $filter (eq, startsWith).'
@@ -21685,7 +21887,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.tokenProtectionStatusDetails'
             uniqueTokenIdentifier:
               type: string
-              description: A unique base64 encoded request identifier used to track tokens issued by Microsoft Entra ID as they're redeemed at resource providers.
+              description: A unique base64-encoded request identifier used to track tokens issued by Microsoft Entra ID as they're redeemed at resource providers.
               nullable: true
             userAgent:
               type: string
@@ -21714,24 +21916,30 @@ components:
           properties:
             appDisplayName:
               type: string
+              description: 'App name displayed in the Microsoft Entra admin center.  Supports $filter (eq, startsWith).'
               nullable: true
             appId:
               type: string
+              description: Unique GUID that represents the app ID in the Microsoft Entra ID.  Supports $filter (eq).
               nullable: true
             appliedEventListeners:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.appliedAuthenticationEventListener'
+              description: 'Detailed information about the listeners, such as Azure Logic Apps and Azure Functions, which the corresponding events in the sign-up event triggered.'
             correlationId:
               type: string
+              description: The request ID sent from the client when the sign-up is initiated. Used to troubleshoot sign-up activity.  Supports $filter (eq).
             createdDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: 'Date and time (UTC) the sign-up was initiated. Example: midnight on Jan 1, 2014 is reported as 2014-01-01T00:00:00Z.  Supports $orderby, $filter (eq, le, and ge).'
               format: date-time
             signUpIdentity:
               $ref: '#/components/schemas/microsoft.graph.signUpIdentity'
             signUpIdentityProvider:
               type: string
+              description: 'Describes the type of account for which the user registered. Values include Email OTP, Email Password, Google.'
             signUpStage:
               $ref: '#/components/schemas/microsoft.graph.signUpStage'
             status:
@@ -23245,6 +23453,8 @@ components:
           properties:
             billed:
               $ref: '#/components/schemas/microsoft.graph.partners.billing.billedReconciliation'
+            unbilled:
+              $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
           additionalProperties:
             type: object
     microsoft.graph.partners.billing.billedReconciliation:
@@ -23259,6 +23469,20 @@ components:
       enum:
         - full
         - basic
+        - unknownFutureValue
+      type: string
+    microsoft.graph.partners.billing.unbilledReconciliation:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: unbilledReconciliation
+          type: object
+          additionalProperties:
+            type: object
+    microsoft.graph.partners.billing.billingPeriod:
+      title: billingPeriod
+      enum:
+        - current
+        - last
         - unknownFutureValue
       type: string
     microsoft.graph.partners.billing.azureUsage:
@@ -23287,13 +23511,6 @@ components:
           type: object
           additionalProperties:
             type: object
-    microsoft.graph.partners.billing.billingPeriod:
-      title: billingPeriod
-      enum:
-        - current
-        - last
-        - unknownFutureValue
-      type: string
     microsoft.graph.securityReportsRoot:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -23923,11 +24140,11 @@ components:
       properties:
         key:
           type: string
-          description: Key.
+          description: Contains the name of the field that a value is associated with.
           nullable: true
         value:
           type: string
-          description: Value.
+          description: Contains the corresponding value for the specified key.
           nullable: true
       additionalProperties:
         type: object
@@ -24086,6 +24303,18 @@ components:
       properties:
         status:
           $ref: '#/components/schemas/microsoft.graph.provisioningResult'
+      additionalProperties:
+        type: object
+    microsoft.graph.agentic.agentSignIn:
+      title: agentSignIn
+      type: object
+      properties:
+        agentType:
+          $ref: '#/components/schemas/microsoft.graph.agentic.agentType'
+        parentAppId:
+          type: string
+          description: The ID of the parent application for agentic instances.
+          nullable: true
       additionalProperties:
         type: object
     microsoft.graph.appliedConditionalAccessPolicy:
@@ -24589,6 +24818,7 @@ components:
       properties:
         signUpIdentifier:
           type: string
+          description: The identification that the user is trying to utilize to sign up.
           nullable: true
         signUpIdentifierType:
           $ref: '#/components/schemas/microsoft.graph.signUpIdentifierType'
@@ -24612,14 +24842,17 @@ components:
       properties:
         additionalDetails:
           type: string
+          description: Provides additional details on the sign-up activity.
           nullable: true
         errorCode:
           maximum: 2147483647
           minimum: -2147483648
           type: number
+          description: Provides the 5-6 digit error code that's generated during a sign-up failure.
           format: int32
         failureReason:
           type: string
+          description: Provides the error message or the reason for failure for the corresponding sign-up activity.
           nullable: true
       additionalProperties:
         type: object
@@ -24841,6 +25074,7 @@ components:
         - managedDeviceSignInFailure
         - compliantDeviceSignInFailure
         - unknownFutureValue
+        - conditionalAccessBlockedSignIn
       type: string
     microsoft.graph.healthMonitoring.category:
       title: category
@@ -24878,6 +25112,7 @@ components:
         - mfa
         - devices
         - unknownFutureValue
+        - conditionalAccess
       type: string
     microsoft.graph.healthMonitoring.signals:
       allOf:
@@ -25686,11 +25921,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
           nullable: true
       additionalProperties:
         type: object
@@ -25749,6 +25984,15 @@ components:
         - processing
         - referenceResolution
         - export
+        - unknownFutureValue
+      type: string
+    microsoft.graph.agentic.agentType:
+      title: agentType
+      enum:
+        - notAgentic
+        - agenticAppBuilder
+        - agenticApp
+        - agenticAppInstance
         - unknownFutureValue
       type: string
     microsoft.graph.authenticationStrength:
